--- a/src/components/container/selectors.module.css
+++ b/src/components/container/selectors.module.css
@@ -23,6 +23,7 @@ select:hover{
     border: 2px solid var(--accent);
 }
 .table{
+    max-width: 100vw;
     box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.08) 0 0 0 1px;
     background-color: rgba(255, 255, 255, 0.074);
     backdrop-filter: blur(10px);
@@ -44,4 +45,11 @@ table,th,td{
 }
 option{
     background: var(--background);
+}
+@media (max-width: 375px) {
+    .table{
+        th,tr{
+            font-size: 12px;
+        }
+    }
 }
