--- a/src/components/product_tag/product_tag.module.css
+++ b/src/components/product_tag/product_tag.module.css
@@ -4,14 +4,14 @@
     align-items: center;
     justify-content: space-between;
     margin: 20px 25px 0;
+    i{
+        font-size: 30px;
+    }
+    i:hover{transform: scale(1.5);}
+    i:active {transform: scale(0.95);}
     h2{
         margin: 0;
         font-size: 30px;
         text-shadow: var(--accent) 0 0 8px;
     }
 }
-i{
-    font-size: 30px;
-}
-i:hover{transform: scale(1.5);}
-i:active {transform: scale(95%);}
