--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     font-family: "Barlow semi Condensed",sans-serif;
     font-weight: bold ;
     transition: all 0.3s;
+    scroll-behavior: smooth;
     ::-webkit-scrollbar{
         width: 0.75em;
     }
@@ -26,15 +27,9 @@ body{margin: 10px;background: var(--background);min-height: 98vh;}
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    main{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
 }
 button{cursor: pointer;border: none;appearance: none;background-color: inherit;}
 a{text-decoration: none;}
-
 :root {
     --text: #ffffff;
     --background: #120f1a;
@@ -60,4 +55,5 @@ a{text-decoration: none;}
     --border: rgba(0,0,0,0.25);
     --hr: rgba(0,0,0,0.50);
     --table: rgba(0, 0, 0, 0.074);
+    --textshadow: rgba(95,82,211,1);
 }
