--- a/src/components/contact/contactus.module.css
+++ b/src/components/contact/contactus.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     *{box-sizing: border-box}
+    margin: auto;
 }
 .contactus_container{
     margin: 20px 0 10px;
