--- a/src/components/container/selectors.module.css
+++ b/src/components/container/selectors.module.css
@@ -26,11 +26,17 @@ select:hover{
     max-width: 100vw;
     box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.08) 0 0 0 1px;
     background-color: rgba(255, 255, 255, 0.074);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(7.5px);
     text-align: center;
     border-radius: 20px;
     border: 2px solid rgba(255, 255, 255, 0.074);
     overflow: hidden;
+}
+.table_trans{
+    box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.08) 0 0 0 1px;
+    background-color: var(--trans-background);
+    backdrop-filter: blur(7.5px);
+    text-align: center;
 }
 table,th,td{
     color: var(--text);
