--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,11 +1,18 @@
 footer{
     border-radius: 20px;
-    margin: 10px 0 0 0;
+    margin: auto 0 0 0;
     background-color: rgba(255, 255, 255, 0.074);
     box-shadow: rgba(14, 30, 37, 0.12) 0 2px 4px 0, rgba(14, 30, 37, 0.32) 0 2px 16px 0;
     a:hover{
         text-shadow: 2px 2px 4px var(--glow);
     }
+}
+.footer_trans{
+    background-color: var(--trans-background);
+    backdrop-filter: blur(7.5px);
+    border-radius: 0;
+    margin: auto -10px -10px;
+    border-top: var(--accent) solid 2px;
 }
 .footer{
     box-sizing: content-box;
@@ -13,8 +20,9 @@ footer{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding: 0 20px;
     .content{
-        padding: 0 20px;
+        padding: 0;
         min-width: 250px;
         ul{padding: 0;}
         li{
@@ -28,6 +36,7 @@ footer{
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 0 20px 15px;
     .text{
