--- a/src/components/about us/aboutuscomponent.module.css
+++ b/src/components/about us/aboutuscomponent.module.css
@@ -21,6 +21,9 @@
         p{font-size: 45px;font-weight: normal}
         padding: 20px;
         margin: 25px 0;
+        .aboutus_img{
+            max-width: 100%;
+        }
     }
     .aboutus_b1{
         box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.08) 0 0 0 1px;
