--- a/src/components/about us/aboutuscomponent.module.css
+++ b/src/components/about us/aboutuscomponent.module.css
@@ -19,7 +19,7 @@
         border-radius: 20px;
         h1{text-align: center;}
         p{font-size: 45px;font-weight: normal}
-        padding: 20px;
+        padding: 20px 30px;
         margin: 25px 0;
         .aboutus_img{
             max-width: 100%;
@@ -32,7 +32,7 @@
         border-radius: 20px;
         h1{text-align: left;}
         p{opacity: 90%; font-size: 45px;font-weight: normal}
-        padding: 20px 30px 30px;
+        padding: 20px 30px;
     }
     .aboutus_b2{
         box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.08) 0 0 0 1px;
